--- a/koperasi-backend/composer.json
+++ b/koperasi-backend/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
         "laravel/ui": "^4.6",
+        "maatwebsite/excel": "3.1.64",
         "spatie/laravel-permission": "^6.19"
     },
     "require-dev": {
